fixed row overflow issue

--- a/main.css
+++ b/main.css
@@ -72,5 +72,27 @@ h1 {
     background-color: #eee;
 }
 .container-pad {
-    padding: 5% 0;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
+[class^="col-"] > [class^="col-"]:first-child,
+[class^="col-"] > [class*=" col-"]:first-child
+[class*=" col-"] > [class^="col-"]:first-child,
+[class*=" col-"]> [class*=" col-"]:first-child,
+.row > [class^="col-"]:first-child,
+.row > [class*=" col-"]:first-child{
+  padding-left: 0px;
+}
+[class^="col-"] > [class^="col-"]:last-child,
+[class^="col-"] > [class*=" col-"]:last-child
+[class*=" col-"] > [class^="col-"]:last-child,
+[class*=" col-"]> [class*=" col-"]:last-child,
+.row > [class^="col-"]:last-child,
+.row > [class*=" col-"]:last-child{
+    padding-right: 0px;
 }
